# kg-rag

./: .env.example  .gitignore  Dockerfile  Dockerfile.chromadb  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
src/kg_rag/: app.py  config.py  models.py
src/kg_rag/embeddings/: embedder.py
src/kg_rag/evaluation/: prepare_eval_dataset.py  qa_eval.py
src/kg_rag/query_understanding/: filters.py
src/kg_rag/rag/: ingest.py  qa.py  transform.py
src/kg_rag/retrievers/: base.py  bm25.py  hybrid.py  reranker.py  schemas.py  semantic.py
src/kg_rag/utils/: read_json.py
src/kg_rag/vectorstore/: chroma_db.py  neo4j_store.py
